--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ aus_senate = { git = "https://github.com/michaelsproul/aus_senate.git" }
 serde = "1.0"
 serde_json = "1.0"
 serde_derive = "1.0"
+csv = "1.0.0-beta.3"
